--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
 
 <style>
   
   body {
     background-color: #8A6554;
     text-align: center;
-    margin: 0;
+    margin: 0 auto;
     color: white;
-    font-family:
+    font-family: "Kantumruy Pro", serif;
   }
   
   h2{
@@ -23,6 +28,21 @@
   font-family: "Lora", serif;
   margin-top: 100px;
   }
+  
+  
+  .home-page-grid{
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+    box-align: center;
+    grid-gap: 50px;
+    padding: 100px;
+  }
+  
+  #section0 img:hover{
+    transform: rotate(-10deg) scale(1.1);
+  }
+  
+  
   
   #section0, #section1, #section2, #section3, #section4 {
   height: 700px;  
@@ -57,9 +77,29 @@
 <h2>Welcome to my cozy corner!</h2>
   
 <div id="section0">
+   <div class="home-page-grid">
+   <img 
+  src="2228 final project book image.jpg"
+  height="120"
+  alt="pink striped notebook"
+  style="padding-left: 40px;">
+     
+    <img src="228_final_ribbon-removebg-preview (1).png", height=160px alt="pink ribbon">
+    <img src="dango-removebg-preview.png", alt="illustration of dango on a stick", height= 150px, transform= rotate(15deg);>
+    <img src="228_final_rabbit-removebg-preview.png", height= 160px, alt="drawing of rabbit in purple">
+    <img src="228_final_Matcha-removebg-preview.png", height =160 alt="Matcha in a pink mug">
+    <img src="228_final_star-removebg-preview.png", height= 160 alt="purple embroided star"
+         </div>
 </div>
+  
+  
 <div id="section1">
 Your amazing content goes here!
+  <video width="100%""; height=auto; controls><source src="pinterest-video-75.mp4" type="video/mp4">
+  </video>
+  
+  
+  
 </div>
 <div id="section2">
 Your amazing content goes here!
